--- a/dLofaro-RAS-hubo-ach.tex
+++ b/dLofaro-RAS-hubo-ach.tex
@@ -1,24 +1,14 @@
-\documentclass[conference]{IEEEtran}
+\documentclass[conference]{ieeeconf}
+%\documentclass[conference]{IEEEtran}
 \IEEEoverridecommandlockouts
-\linespread{0.85}
+%\linespread{0.85}
 
-\ifCLASSINFOpdf
+
   \usepackage[pdftex]{graphicx}
-\else
-  
-\fi
-\hyphenation{op-tical net-works semi-conduc-tor}
-
 \setlength{\abovecaptionskip}{-1pt}
 %\setlength{\belowcaptionskip}{-200pt}
 %\setlength{\intextsep}{-1mm}
 \begin{document}
-
-%
-% paper title
-% can use linebreaks \\ within to get better formatting as desired
-%\title{Adult-Size Humanoid Robot Throwing the First Pitch at a Major League Baseball Game \\ A Road Map}
-\title{Humanoid Pitching at a Major League Baseball Game: Challenges, Approach, Implementation and Lessons Learned}
 
 
 %\begin{abstract}
