--- a/introduction.tex
+++ b/introduction.tex
@@ -26,9 +26,9 @@ his includes:
 \end{itemize}
 
 The PHC daemon runs in real-time using the preempt-rt kernel.  
-All sensors are polled and motor references are set at the system frequency.  
-This frequency is currently set to 250 $Hz$.  
-This frequency is limited by the bandwidth of the CAN communications bus which is currently set to 1.0 $Mbps$.  
+All sensors are polled and motor references are set at the system period.  
+This period is currently set to 0.004 $sec$, $T_H$.  
+This period is limited by the bandwidth of the CAN communications bus which is currently set to 1.0 $Mbps$.  
 Currently there are two CAN channels with one controlling the upper body and one the lower body.  
 The operation frequency can be increase if more CAN channels are added.  
 The PHC system is designed for ease of adding communication busses.  
@@ -37,7 +37,8 @@ At the beginning of each cycle the new references are set to each actuator.
 After each cycle the state is updated with the new sensor data.
 
 A separate process will subscribe to the \textit{feedforward} and \textit{feedback} channels and run it's own real-time loop.  
-This can run at any frequency it wants
+This can run, update reference and read the feedback channel at any desired frequency within the processor and IPCs capabilities.
+The PHC will always take the most recent reference from the feedforward channel at the rising edge of it's clock cycle with the period of $T_H$.
 
 \begin{figure}[thpb]
   \centering
