--- a/dLofaro-RAS-hubo-ach.tex
+++ b/dLofaro-RAS-hubo-ach.tex
@@ -26,9 +26,9 @@
 
 
 
-\linespread{0.8}
+%\linespread{0.8}
 
-\bibliographystyle{IEEEtran}
+\bibliographystyle{ieeeconf}
 %\bibliographystyle{plain}
 \bibliography{hubo-ach}{}
   
