added intro to hubo

--- a/ram-12-ach/ach.tex
+++ b/ram-12-ach/ach.tex
@@ -37,18 +37,21 @@
 
 \author{Neil Dantam \IEEEauthorrefmark{1}
   Dan Lofaro \IEEEauthorrefmark{2}
-  Ayonga Hereid \IEEEauthorrefmark{3}
-  Paul Oh \IEEEauthorrefmark{2}
-  Aaron Ames \IEEEauthorrefmark{3}
+  Ayonga Hereid \IEEEauthorrefmark{4}
+  Paul Oh \IEEEauthorrefmark{3}
+  Aaron Ames \IEEEauthorrefmark{4}
   Mike Stilman \IEEEauthorrefmark{1}% <-this % stops a space
   \IEEEcompsocitemizethanks{
     \IEEEcompsocthanksitem \IEEEauthorrefmark{1}
     Center for Robotics  and Intelligent Machines, %
     Georgia Institute of Technology, Atlanta, GA 30332, USA.
-    \IEEEcompsocthanksitem \IEEEauthorrefmark{2}
-    Mechanical Engineering Department,
+        \IEEEcompsocthanksitem \IEEEauthorrefmark{2}
+    Electrical and Computer Engineering Department,
     3141 Chestnut Street, Philadelphia, PA 19104
     \IEEEcompsocthanksitem \IEEEauthorrefmark{3}
+    Mechanical Engineering Department,
+    3141 Chestnut Street, Philadelphia, PA 19104
+    \IEEEcompsocthanksitem \IEEEauthorrefmark{4}
     Mechanical Engineering, %
     Texas A\&M University, %
     422 James J. Cain 51 Bldg, %
