--- a/ram-12-ach/bibtex.bib
+++ b/ram-12-ach/bibtex.bib
@@ -665,8 +665,23 @@ month={dec.},
 
 @INPROCEEDINGS{lofaroURAI,
 author={Lofaro, D. and Oh, P.},
-booktitle={Humanoid Throws Inaugural Pitch at Major League Baseball Game: Challenges, Approach, Implementation and Lessons Learned},
+booktitle={Intelligent Robots and Systems (IROS), 2012 IEEE/RSJ International Conference on},
+title={Humanoid Throws Inaugural Pitch at Major League Baseball Game: Challenges, Approach, Implementation and Lessons Learned},
 year={2012},
 month={nov.},
 }
 
+@INPROCEEDINGS{hubo-first, 
+author={Baek-Kyu Cho and Sang-Sin Park and Jun-ho Oh}, 
+booktitle={Humanoid Robots, 2009. Humanoids 2009. 9th IEEE-RAS International Conference on}, title={Controllers for running in the humanoid robot, HUBO}, 
+year={2009}, 
+month={dec.}, 
+}
+
+
+@INPROCEEDINGS{jaemiHuboSRM, 
+author={Lofaro, Daniel M. and Ellenberg, Robert and Oh, Paul and Oh, Jun-Ho}, 
+booktitle={Intelligent Robots and Systems (IROS), 2012 IEEE/RSJ International Conference on}, title={Humanoid throwing: Design of collision-free trajectories with sparse reachable maps}, 
+year={2012}, 
+month={oct.}, 
+}
